--- a/src/my-app.html
+++ b/src/my-app.html
@@ -35,6 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="my-icons.html">
 <link rel="lazy-import" href="user-list.html">
+<link rel="lazy-import" href="group-list.html">
 <link rel="lazy-import" href="test-page.html">
 <link rel="lazy-import" href="get-ajax-data.html">
 <link rel="lazy-import" href="view-404.html">
@@ -86,13 +87,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       client-id="352789647391-vq04b3va9ht4ie1ggig3r4crlfn8946r.apps.googleusercontent.com"
       brand="google" width="wide"
       is-authorized="{{isAuthorized}}"
-      hosted-domain=""
-  ></google-signin>
+      hosted-domain="">
+      </google-signin>
     <google-signin-aware
         scopes="https://www.googleapis.com/auth/drive"
         offline
-        on-google-signin-aware-success="_handleSignin"
-    ></google-signin-aware>
+        on-google-signin-aware-success="_handleSignin">
+    </google-signin-aware>
   </template>
 
     <template is="dom-if" if="{{isAuthorized}}" restamp>
@@ -101,7 +102,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           route="{{route}}"
           pattern="[[rootPath]]:page"
           data="{{routeData}}"
-          tail="{{subroute}}"></app-route>
+          tail="{{subroute}}">
+      </app-route>
       <app-drawer-layout fullbleed narrow="{{narrow}}">
 
         <!-- Drawer content -->
@@ -109,6 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-toolbar>Menu</app-toolbar>
           <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
             <a name="user-list" href="[[rootPath]]user-list">User List</a>
+            <a name="group-list" href="[[rootPath]]group-list">Group List</a>
             <a name="test-page" href="[[rootPath]]test-page">Test page</a>
             <a name="get-ajax-data" href="[[rootPath]]get-ajax-data">get-ajax-data</a>
           </iron-selector>
@@ -129,6 +132,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               fallback-selection="view-404"
               role="main">
             <user-list name="user-list"></user-list>
+            <group-list name="group-list"></group-list>
             <test-page name="test-page" who="{{name}}"></test-page>
             <get-ajax-data name="get-ajax-data" g-token="[[accessToken]]"></get-ajax-data>
             <view-404 name="view-404"></view-404>
