--- a/src/user-list.html
+++ b/src/user-list.html
@@ -65,6 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             paginate
             selectable
             filters
+            language="en-us"
             page="{{page}}"
             size="{{size}}"
             available-size="[10, 25, 50, 100]"
