--- a/src/group-list.html
+++ b/src/group-list.html
@@ -68,7 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             data="[[dataFromApi]]">
           <paper-datatable-api-column
               header="Group ID"
-              property="group_id"
+              property="id"
               draggable-column
               sortable>
             <template>
@@ -77,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </paper-datatable-api-column>
           <paper-datatable-api-column
               header="Group Name"
-              property="groupName"
+              property="name"
               draggable-column
               sortable
               filter>
@@ -87,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </paper-datatable-api-column>
           <paper-datatable-api-column
               header="Group Level"
-              property="groupLevel"
+              property="level"
               draggable-column
               sortable
               filter>
